syntax = "proto3";
package cometbft.state.v2;

import "cometbft/abci/v2/types.proto";
import "cometbft/types/v2/params.proto";
import "cometbft/types/v2/types.proto";
import "cometbft/types/v2/validator.proto";
import "cometbft/version/v1/types.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

option go_package = "github.com/cometbft/cometbft/api/cometbft/state/v2";

// LegacyABCIResponses retains the responses
// of the legacy ABCI calls during block processing.
// Note ReponseDeliverTx is renamed to ExecTxResult but they are semantically the same
// Kept for backwards compatibility for versions prior to v0.38
message LegacyABCIResponses {
  repeated cometbft.abci.v2.ExecTxResult deliver_txs = 1;
  ResponseEndBlock                       end_block   = 2;
  ResponseBeginBlock                     begin_block = 3;
}

// ResponseBeginBlock is kept for backward compatibility for versions prior to v0.38,
// as it was then defined in the cometbft.abci packages.
message ResponseBeginBlock {
  repeated cometbft.abci.v2.Event events = 1
      [(gogoproto.nullable) = false, (gogoproto.jsontag) = "events,omitempty"];
}

// ResponseEndBlock is kept for backward compatibility for versions prior to v0.38,
// its earlier revisions were defined in the cometbft.abci packages.
// It uses an updated definition for the consensus_param_updates field to keep the
// generated data types interoperable with the latest protocol.
message ResponseEndBlock {
  repeated cometbft.abci.v2.ValidatorUpdate validator_updates       = 1 [(gogoproto.nullable) = false];
  cometbft.types.v2.ConsensusParams         consensus_param_updates = 2;
  repeated cometbft.abci.v2.Event events                            = 3
      [(gogoproto.nullable) = false, (gogoproto.jsontag) = "events,omitempty"];
}

// ValidatorsInfo represents the latest validator set, or the last height it changed
message ValidatorsInfo {
  cometbft.types.v2.ValidatorSet validator_set       = 1;
  int64                          last_height_changed = 2;
}

// ConsensusParamsInfo represents the latest consensus params, or the last height it changed
message ConsensusParamsInfo {
  cometbft.types.v2.ConsensusParams consensus_params    = 1 [(gogoproto.nullable) = false];
  int64                             last_height_changed = 2;
}

// ABCIResponsesInfo retains the responses of the ABCI calls during block processing.
message ABCIResponsesInfo {
  // Retains the responses of the legacy ABCI calls during block processing.
  LegacyABCIResponses                    legacy_abci_responses = 1;
  int64                                  height                = 2;
  cometbft.abci.v2.FinalizeBlockResponse finalize_block        = 3;
}

// Version is a message for storing versioning information.
message Version {
  cometbft.version.v1.Consensus consensus = 1 [(gogoproto.nullable) = false];
  string                        software  = 2;
}

// State represents the state of the blockchain.
message State {
  Version version = 1 [(gogoproto.nullable) = false];

  // immutable
  string chain_id       = 2 [(gogoproto.customname) = "ChainID"];
  int64  initial_height = 14;

  // LastBlockHeight=0 at genesis (ie. block(H=0) does not exist)
  int64                     last_block_height = 3;
  cometbft.types.v2.BlockID last_block_id     = 4 [
    (gogoproto.nullable)   = false,
    (gogoproto.customname) = "LastBlockID"
  ];
  google.protobuf.Timestamp last_block_time = 5 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime)  = true
  ];

  // LastValidators is used to validate block.LastCommit.
  // Validators are persisted to the database separately every time they change,
  // so we can query for historical validator sets.
  // Note that if s.LastBlockHeight causes a valset change,
  // we set s.LastHeightValidatorsChanged = s.LastBlockHeight + 1 + 1
  // Extra +1 due to nextValSet delay.
  cometbft.types.v2.ValidatorSet next_validators                = 6;
  cometbft.types.v2.ValidatorSet validators                     = 7;
  cometbft.types.v2.ValidatorSet last_validators                = 8;
  int64                          last_height_validators_changed = 9;

  // Consensus parameters used for validating blocks.
  // Changes returned by EndBlock and updated after Commit.
  cometbft.types.v2.ConsensusParams consensus_params                     = 10 [(gogoproto.nullable) = false];
  int64                             last_height_consensus_params_changed = 11;

  // Merkle root of the results from executing prev block
  bytes last_results_hash = 12;

  // the latest AppHash we've received from calling abci.Commit()
  bytes app_hash = 13;

  // delay between the time when this block is committed and the next height is started.
  // previously `timeout_commit` in config.toml
  google.protobuf.Duration next_block_delay = 15 [
    (gogoproto.nullable) = false,
    (gogoproto.stdduration) = true
  ];
}
